# copycat

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yml
doc/man/man1/: copycat.1
src/: copycat.c  copycat.h
src/lib/: copycat.c  copycat.h
src/lib/syscalls/: open.c  open.h  openat.c  openat.h  openat2.c  openat2.h
tests/: CMakeLists.txt  benchmark.c  run-tests.sh  tests_general.c
